--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
         <p class="subtext">
             People of Mumbai know a good thing when they see it and they fall in love with a good thing when they taste
-            it. That’s why we have taken our catering services beyond the kitchen. We are known for homemade cakes,
-            desserts and snacks. We pride ourselves on baking everything with love and using the best ingredients.
+            it. 
+            <br>
+            That’s why we have taken our catering services beyond the kitchen. We are known for <span class="bold">homemade cakes,
+                desserts and snacks.</span> We pride ourselves on baking everything with ❤️️ and using the <span class="bold">best ingredients.</span>
 
         </p>
 
@@ -30,6 +32,10 @@
             <video width="100%" height="100%" loop autoplay muted>
                 <source src="./assets/videos/VID-20200728-WA0003.mp4" type="video/mp4">
         </div>
+    </section>
+
+    <section class="ourStory">
+        <h1 class="headline-text">Our Story</h1>
     </section>
 
 </body>
