--- a/index.html
+++ b/index.html
@@ -6,24 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stella's Love</title>
     <link rel="stylesheet" href="./assets/sass/main.scss">
+    <link href="https://unpkg.com/pattern.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+
 </head>
 
 <body>
 
     <header>
         <nav>
-            <img class="logo" src="./assets/images/logo-removebg-preview (1).png">
+            <img class="logo" src="./assets/images/Stella'sLove-PNG-(black).png">
         </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero" >
         <h1 class="headline-text">Stella's Love - <br>A Kitchen With A Twist</h1>
 
         <p class="subtext">
             People of Mumbai know a good thing when they see it and they fall in love with a good thing when they taste
             it. 
             <br>
-            That’s why we have taken our catering services beyond the kitchen. We are known for <span class="bold">homemade cakes,
+            That’s why we have taken our catering services beyond the kitchen. We are known for <span class="element bold">homemade cakes,
                 desserts and snacks.</span> We pride ourselves on baking everything with ❤️️ and using the <span class="bold">best ingredients.</span>
 
         </p>
@@ -34,10 +38,118 @@
         </div>
     </section>
 
-    <section class="ourStory">
+    <section class="ourStory" data-aos="fade-up">
         <h1 class="headline-text">Our Story</h1>
+        <div class="pattern-dots-md gray-light">
+            <img style="transform:translate(24px, -17px);" src="./assets/images/story.jpg"/>
+            </div>
+
+
+        <p class="subtext">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quidem corporis quos tempora animi inventore illo, sit iste accusantium recusandae facilis rerum soluta cupiditate excepturi quam, deserunt ipsa eveniet temporibus.
+        </p>
     </section>
 
+
+    <section class="safety">
+        <div class="pattern-diagonal-lines-md pd-30" data-aos="fade-right">
+        <h1 class="headline-text">Safe & Hygienic</h1>
+        <!-- <img class="ulta-cat" src="./assets/images/ulta-cat.png"> -->
+        <span class="boldie">Your Safety - Our Priority</span>
+        <p class="subtext">      
+            We work tirelessly to find new ways to improve your experience, keep you safe and bring you peace of mind.
+        </p>
+
+        <img class="cat-btm" src="./assets/images/catsup.png">
+
+        </div>
+
+    </section>
+
+    <section class="fresh-baked" 
+    style = "background-image: url(./assets/images/123.jpg);" data-aos="fade-left">
+        <p class="subtext">
+            Freshly baked goodies,handmade with love. Shipped right to your door.
+        </p>
+
+        <a class="abutton" href="#">Menu</a>
+    </section>
+
+    <section class="instagram pattern-diagonal-stripes-sm
+    " data-aos="flip-up">
+       <p class="subtext">
+        follow us on instagram <br> 
+        <span class="follow-on"><img src="./assets/images/instagram.png">stellas_love</span>
+       </p> 
+
+       <div class="instagram-grid">
+           <div class="ig-img">
+               <img src="./assets/images/ig-grid/grid-1.png">
+           </div>
+           <div class="ig-img">
+               <img src="./assets/images/ig-grid/grid-2 (1).jpg">
+           </div>
+           <div class="ig-img">
+               <img src="./assets/images/ig-grid/grid-2 (2).jpg">
+           </div>
+           <div class="ig-img">
+               <img src="./assets/images/ig-grid/grid-2 (3).jpg">
+           </div>
+           <div class="ig-img">
+               <img src="./assets/images/ig-grid/grid-2 (4).jpg">
+           </div>
+           <div class="ig-img">
+               <img src="./assets/images/ig-grid/grid-2 (5).jpg">
+           </div>
+       </div>
+
+
+       <div class="place-order">
+           <div class="subtext">
+               Reach us at
+             
+            </div>
+
+        <div class="call-me">
+            <div class="contact-box">
+                <a onclick="window.open('tel:+91 9967027171');">
+                    <img src='./assets/images/phoner.png'> 
+                    +91 9967027171
+                </a>
+            </div>
+
+            <div class="contact-box">
+                <a onclick="window.open('tel:9767715333');">
+                    <img src='./assets/images/phoner.png'> 
+                    +91 9767715333
+                </a>
+            </div>
+                 
+            <div class="contact-box" style="padding: 10px 40px;">
+                <a href="https://wa.link/redw4q">
+                    <img src='./assets/images/whatsapp (4).png'> 
+                    Whatsapp 
+                </a>
+            </div>
+        </div>
+
+
+       </div>
+
+       <div class="footer">
+        <p>
+            Made with ❤️️ by </p>
+            <a href="https://allanmoses.codes">Allan Moses Fernandes</a>  
+  
+            </div>
+    </section>
+
+
+    <script src="./main.js"></script>
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+		AOS.init();
+	</script>
 </body>
 
 </html>
