--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             People of Mumbai know a good thing when they see it and they fall in love with a good thing when they taste
             it. 
             <br>
-            That’s why we have taken our catering services beyond the kitchen. We are known for <span class="element bold">homemade cakes,
-                desserts and snacks.</span> We pride ourselves on baking everything with ❤️️ and using the <span class="bold">best ingredients.</span>
+    strings: ['homemade cakes','desserts', 'snacks'],
+            That’s why we have taken our catering services beyond the kitchen. We are known for <span class="element bold"></span> <br>We pride ourselves on baking everything with ❤️️ and using the <span class="bold">best ingredients.</span>
 
         </p>
 
