--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#fde24fe0">
+	<link rel="shortcut icon" href="./assets/images/favicon_io (5)/favicon-16x16.png" type="image/x-icon">
+
     <title>Stella's Love</title>
     <link rel="stylesheet" href="./assets/sass/main.scss">
     <link href="https://unpkg.com/pattern.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+	<!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> --> 
 
 </head>
 
